--- a/Currency Converter.html
+++ b/Currency Converter.html
@@ -27,7 +27,7 @@
         	<option>select</option>
         </select>
         <br><br>
-        <input type="text" name="" id="input_currency" placeholder="Enter the Amount">
+        <input type="text" name="" id="input_currency" placeholder="Enter Amount">
       </div>
       
       <div class="col" >
